# substring_search_benchmark

./: CMakeLists.txt  README.md
data/: in.txt  sample_algoritm2.txt  sample_guaranted.txt  stdIn.txt
include/: console.hpp  metrics.hpp  search_data.hpp  search_types.hpp  test_runner.hpp
scripts/: plot.py
src/: boyer_moore_search.cpp  console.cpp  main.cpp  naive_search.cpp  search_data.cpp  test_runner.cpp
